# arcane

./: .env.example  .gitignore  ARCANE_MASTERBUILD.md  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: risk.yaml  universe.yaml
docs/: INC2-HARDENING-BACKLOG.md  INC3-HARDENING-BACKLOG.md  INC4-HARDENING-BACKLOG.md  INC5-HARDENING-BACKLOG.md  INC6-HARDENING-BACKLOG.md  INC7-HARDENING-BACKLOG.md  INC8-HARDENING-BACKLOG.md  INC8.5-HARDENING-BACKLOG.md  INC8.6-HARDENING-BACKLOG.md  INCREMENT-2-DESIGN.md  INCREMENT-3-DESIGN.md  INCREMENT-4-DESIGN.md  INCREMENT-5-DESIGN.md  INCREMENT-6-DESIGN.md  INCREMENT-7-DESIGN.md  INCREMENT-8-DESIGN.md  INCREMENT-8.5-DESIGN.md  INCREMENT-8.6-DESIGN.md  RISK_REGISTER.md  STATE.md
docs/adr/: ADR-001-foundation.md
src/trading/: __init__.py  settings.py
src/trading/allocator/: __init__.py  allocate.py
src/trading/backtest/: __init__.py  cost_model.py  engine.py  errors.py  ledger_integration.py  resolve.py  spec.py  statistics.py  strategies.py  walk_forward.py
src/trading/bias_gate/: __init__.py  _normal.py  errors.py  evidence.py  gate.py  high_water_mark.py  stats.py  tests_t2.py  thresholds.py  trial_identity.py  verdict.py
src/trading/console/: __init__.py  app.py  authz.py  commands.py  errors.py  news_refresh.py  poller.py  responder.py  run.py  state_reader.py
src/trading/data/: __init__.py  alpaca_loader.py  bar_schema.py  cache.py  calendar.py  errors.py  leak_lint.py  loader.py  membership_artifact.py  membership_cache.py  pit.py  polygon_universe.py  prefix_stability.py  quality.py  reliability.py  sanitize.py  universe.py  universe_sources.py
src/trading/driver/: __init__.py  errors.py  run_once.py
src/trading/executor/: __init__.py  broker_paper.py  grant.py  idempotency.py  intent.py  invariants.py  kill_switch.py  live_mode.py  loop.py  mistake_check.py  preflight.py  reconciler.py  (+4 more)
tests/: conftest.py
tests/unit/: _gate_fixtures.py  test_allocator.py  test_alpaca_loader.py  test_apify_composite.py  test_backtest_engine.py  test_backtest_errors.py  test_backtest_integration.py  test_backtest_ledger.py  test_backtest_statistics.py  test_bar_schema.py  test_bias_gate_composer.py  test_bias_gate_errors.py  test_bias_gate_evidence_assembler.py  test_bias_gate_high_water_mark.py  test_bias_gate_normal.py  test_bias_gate_pbo_spa.py  test_bias_gate_psr_dsr.py  test_bias_gate_purge.py  test_bias_gate_t2.py  test_bias_gate_thresholds.py  test_bias_gate_trial_identity.py  test_broker_paper.py  test_cache.py  test_calendar.py  test_caps.py  test_console_app.py  test_console_authz.py  test_console_commands.py  test_console_poller.py  test_console_responder.py  test_console_run.py  test_console_state_reader.py  test_cost_model.py  test_d1_residual_gate_derives_binding.py  test_data_smoke.py  test_driver.py  test_factor_base.py  test_factor_errors.py  test_factor_library.py  test_factor_registry.py  (+65 more)
(+53 files in other folders)
