[project]
name = "arcane"
version = "0.1.0"
description = "ARCANE — autonomous paper-trading research & edge-falsification platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

# Heavier tiers are added in later increments (kept out of the safety-spine env):
#   data = numpy, pandas, polars, duckdb, pyarrow, scipy, scikit-learn, statsmodels, hmmlearn, alpaca-py
#   ml   = torch (cpu index), faiss-cpu, chromadb
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["trading"]
branch = true

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/trading"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py313"]
