[project]
name = "arcane"
version = "0.1.0"
description = "ARCANE — autonomous paper-trading research & edge-falsification platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    # Increment 2 — data spine (verified to resolve on cp313 via uv):
    "alpaca-py==0.43.4",
    "pandas>=3.0,<3.1",
    "numpy>=2.0",
    "pyarrow>=16",
    "duckdb>=1.1",
    "exchange-calendars==4.13.2",
    "pandera>=0.32,<0.33",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not live'"
markers = [
    "live: test hits the real Alpaca API over the network; excluded from make inc1/inc2",
]

[tool.coverage.run]
source = ["trading"]
branch = true

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/trading"]

# Third-party libraries without complete type stubs — imports resolve, types not enforced.
[[tool.mypy.overrides]]
module = [
    "exchange_calendars.*",
    "alpaca.*",
    "duckdb.*",
    "pyarrow.*",
    "pandas",
    "pandas.*",
    "pandera",
    "pandera.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py313"]
